--- a/src/templates/navigation/building.html
+++ b/src/templates/navigation/building.html
@@ -1,18 +1,15 @@
 {% extends "navigation/navigation.html" %}
 
-
+{% load i18n %}
 
 {% block app_content %}
 
-<div class="flex flex-row gap-2 w-full justify-between ">
-    <div class="bg-purple-500">
-    </div>
-    <div class="flex flex-col m-auto items-center justify-center w-full h-full">
-        <h1 class="font-bold">Pagina en construcción</h1>
-        <br>
-        <p>Estamos trabajando lo mas rapido posible :)</p>
-    </div>
-</div>
 
-
+    <div class="flex flex-row gap-2 w-full justify-center items-center ">
+        <div class="bg-white shadow-lg rounded-lg p-10 flex flex-col items-center justify-center m-auto w-96 h-64">
+            <h1 class="font-bold text-xl">{% translate "Página en construcción" %}</h1>
+            <br>
+            <p>{% translate "Estamos trabajando lo más rápido posible :)" %}</p>
+        </div>
+    </div>
 {% endblock %}
