--- a/src/templates/profile/add_project.html
+++ b/src/templates/profile/add_project.html
@@ -2,13 +2,14 @@
 
 {% block content %}
 
+{% load i18n %}
 <div class="pt-16 pb-10 px-4 sm:px-6 lg:px-8 bg-bg_white">
 
     <div class="max-w-7xl mx-auto mb-6 sm:ml-0 lg:ml-40">
-        <h1 class="text-3xl font-bold text-primary_black text-left">Añadir Proyecto al Portafolio</h1>
-        <h2 class="text-lg font-semibold text-primary_dark text-left">Proyectos</h2>
+        <h1 class="text-3xl font-bold text-primary_black text-left">{% translate "Añadir Proyecto al Portafolio" %}</h1>
+        <h2 class="text-lg font-semibold text-primary_dark text-left">{% translate "Proyectos" %}</h2>
         <p class="block text-primary_black font-normal mt-4 font-sans">
-            Aquí puedes agregar información de proyectos relevantes que hayas realizado.
+            {% translate "Aquí puedes agregar información de proyectos relevantes que hayas realizado." %}
         </p>
     </div>
 
@@ -17,50 +18,49 @@
             {% csrf_token %}
 
             <div>
-                <label class="block text-primary_black font-medium" for="project_name">Nombre del Proyecto</label>
+                <label class="block text-primary_black font-medium" for="project_name">{% translate "Nombre del Proyecto" %}</label>
                 <input type="text" name="project_name" id="project_name"
                     class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
                     placeholder="Nombre del proyecto" required>
             </div>
 
             <div>
-                <label class="block text-primary_black font-medium" for="client">Cliente</label>
+                <label class="block text-primary_black font-medium" for="client">{% translate "Cliente" %}</label>
                 <input type="text" name="client" id="client"
                     class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
                     placeholder="Nombre del cliente" required>
             </div>
 
             <div>
-                <label class="block text-primary_black font-medium" for="project_description">Descripción del
-                    Proyecto</label>
+                <label class="block text-primary_black font-medium" for="project_description">{% translate "Descripción del Proyecto" %}</label>
                 <textarea name="project_description" id="project_description" rows="4"
                     class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
                     placeholder="Descripción del proyecto" required></textarea>
             </div>
 
             <div>
-                <label class="block text-primary_black font-medium" for="start_date">Fecha de Inicio</label>
+                <label class="block text-primary_black font-medium" for="start_date">{% translate "Fecha de Inicio" %}</label>
                 <input type="date" name="start_date" id="start_date"
                     class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
                     required>
             </div>
 
             <div>
-                <label class="block text-primary_black font-medium" for="end_date">Fecha de Finalización</label>
+                <label class="block text-primary_black font-medium" for="end_date">{% translate "Fecha de Finalización" %}</label>
                 <input type="date" name="end_date" id="end_date"
                     class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
                     required>
             </div>
 
             <div>
-                <label class="block text-primary_black font-medium" for="activities_done">Actividades Realizadas</label>
+                <label class="block text-primary_black font-medium" for="activities_done">{% translate "Actividades Realizadas" %}</label>
                 <textarea name="activities_done" id="activities_done" rows="4"
                     class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
                     placeholder="Actividades realizadas" required></textarea>
             </div>
 
             <div>
-                <label class="block text-primary_black font-medium">Archivos Adjuntos</label>
+                <label class="block text-primary_black font-medium">{% translate "Archivos Adjuntos" %}</label>
                 <div
                     class="mt-1 flex justify-center items-center px-6 pt-5 pb-6 border-2 border-dashed rounded-md relative">
                     <div class="space-y-1 text-center">
@@ -72,11 +72,11 @@
                         <div class="flex text-sm text-gray-600 justify-center">
                             <label for="attached_files"
                                 class="relative cursor-pointer bg-white rounded-md font-medium text-primary_medium hover:text-primary_dark focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-primary_medium">
-                                <span>Sube tus archivos aquí</span>
+                                <span>{% translate "Sube tus archivos aquí" %}</span>
                                 <input id="attached_files" name="attached_files" type="file" class="sr-only" required>
                             </label>
                         </div>
-                        <p class="text-xs text-gray-500">Aquí puedes adjuntar archivos relacionados con el proyecto.</p>
+                        <p class="text-xs text-gray-500">{% translate "Aquí puedes adjuntar archivos relacionados con el proyecto." %}</p>
                         <div id="uploadSuccess" class="hidden absolute top-0 right-0 mt-2 mr-2 text-green-500">
                             <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -88,14 +88,14 @@
             </div>
 
             <div>
-                <label class="block text-primary_black font-medium" for="external_link">Enlace Externo</label>
+                <label class="block text-primary_black font-medium" for="external_link">{% translate "Enlace Externo" %}</label>
                 <input type="url" name="external_link" id="external_link"
                     class="mt-1 block w-full rounded-md border-gray-300 focus:ring-primary_medium focus:border-primary_medium"
                     placeholder="https://example.com" required>
             </div>
 
             <div>
-                <label class="block text-primary_black font-medium">Imagen del Proyecto</label>
+                <label class="block text-primary_black font-medium">{% translate "Imagen del Proyecto" %}</label>
                 <div
                     class="mt-1 flex justify-center items-center px-6 pt-5 pb-6 border-2 border-dashed rounded-md relative">
                     <div class="space-y-1 text-center">
@@ -107,12 +107,11 @@
                         <div class="flex text-sm text-gray-600 justify-center">
                             <label for="project_image"
                                 class="relative cursor-pointer bg-white rounded-md font-medium text-primary_medium hover:text-primary_dark focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-primary_medium">
-                                <span>Sube una imagen aquí</span>
+                                <span>{% translate "Sube una imagen aquí" %}</span>
                                 <input id="project_image" name="project_image" type="file" class="sr-only" required>
                             </label>
                         </div>
-                        <p class="text-xs text-gray-500">Aquí puedes adjuntar una imagen representativa del proyecto.
-                        </p>
+                        <p class="text-xs text-gray-500">{% translate "Aquí puedes adjuntar una imagen representativa del proyecto." %}</p>
                         <div id="uploadSuccess2" class="hidden absolute top-0 right-0 mt-2 mr-2 text-green-500">
                             <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -126,7 +125,7 @@
             <div class="flex justify-center">
                 <button type="submit"
                     class="bg-primary_dark text-white font-bold py-3 px-6 rounded-md hover:bg-primary_black focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary_dark">
-                    Confirmar
+                    {% translate "Confirmar" %}
                 </button>
             </div>
         </form>
@@ -145,13 +144,13 @@
                 viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
             </svg>
-            <h3 class="text-lg font-semibold text-primary_black">Información guardada exitosamente</h3>
-            <p class="text-gray-600 mt-2">¿Deseas seguir agregando proyectos?</p>
+            <h3 class="text-lg font-semibold text-primary_black">{% translate "Información guardada exitosamente" %}</h3>
+            <p class="text-gray-600 mt-2">{% translate "¿Deseas seguir agregando proyectos?" %}</p>
             <div class="mt-4 flex justify-center space-x-4">
                 <button id="addMore"
-                    class="bg-primary_medium text-white px-4 py-2 rounded hover:bg-primary_dark">Sí</button>
+                    class="bg-primary_medium text-white px-4 py-2 rounded hover:bg-primary_dark">{% translate "Sí" %}</button>
                 <button id="submitForm"
-                    class="bg-gray-100 text-gray-600 px-4 py-2 rounded hover:bg-primary_dark">No</button>
+                    class="bg-gray-100 text-gray-600 px-4 py-2 rounded hover:bg-primary_dark">{% translate "No" %}</button>
             </div>
         </div>
     </div>
